# ceditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
components/: BaseComponent.h  Cursor.h  Cursor_test.cpp  Editor.h  Editor_test.cpp  Menu.h  Menu_test.cpp  Rect.h  Text.h  TextArea.h  TextArea_test.cpp  TextLine.h  TextLine_test.cpp  log.txt
data/highlight/cpp/: keywords.txt  rules.txt
include/components/: Cursor.h  Menu.h  Rect.h  Text.h  TextArea.h  TextLine.h
include/mystl/: my_deque.h  my_list.h  my_skiplist.h  my_vector.h
include/utils/: LexicalAnalysis.h  utils.h
mySTL/: container.h  my_deque.h  my_deque_test.cpp  my_skiplist.h  my_stack.h  my_stack_test.cpp
mystl/: my_deque.h  my_list.h  my_list_test.cpp  my_skiplist_test.cpp  my_vector.h  my_vector_test.cpp
src/: main.cpp
test/: CMakeLists.txt  test_ActionManager.cpp  test_Cursor.cpp  test_Editor.cpp  test_Menu.cpp  test_Rect.cpp  test_RichText.cpp  test_SyntaxHighlighter.cpp  test_my_deque.cpp  test_my_list.cpp  test_my_skiplist.cpp  test_my_stack.cpp  test_my_vector.cpp  test_utils.cpp
test/googletest-1.15.2/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
utils/: ActionManager.h  ActionManager_test.cpp  Color.h  FocusManager.h  InputManager.h  LexicalAnalysis.cpp  LexicalAnalysis.h  RichText.h  RichText_test.cpp  SyntaxHighlighter.h  SyntaxHighlighter_test.cpp  Tokenizer.h  Tokenizer_test.cpp  log.txt  utils.h
